edited css path to work on gh-pages

--- a/blog.html
+++ b/blog.html
@@ -14,49 +14,49 @@
     <meta name="copyright" content="Steve McArthur. Copyright (c) 2014" />
 
 
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/basic-icon.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/icon.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/basic-icon.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/icon.css">
 
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/button.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/divider.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/header.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/image.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/input.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/label.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/loader.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/reveal.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/progress.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/segment.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/elements/step.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/button.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/divider.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/header.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/image.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/input.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/label.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/loader.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/reveal.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/progress.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/segment.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/elements/step.css">
 
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/collections/breadcrumb.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/collections/form.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/collections/grid.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/collections/menu.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/collections/message.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/collections/table.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/collections/breadcrumb.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/collections/form.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/collections/grid.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/collections/menu.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/collections/message.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/collections/table.css">
 
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/views/comment.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/views/list.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/views/feed.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/views/item.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/views/statistic.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/views/comment.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/views/list.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/views/feed.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/views/item.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/views/statistic.css">
 
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/modal.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/accordion.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/dropdown.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/popup.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/rating.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/sidebar.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/shape.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/tab.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/checkbox.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/dimmer.css">
-    <link rel="stylesheet" type="text/css" class="ui" href="/css/modules/transition.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/modal.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/accordion.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/dropdown.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/popup.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/rating.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/sidebar.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/shape.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/tab.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/checkbox.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/dimmer.css">
+    <link rel="stylesheet" type="text/css" class="ui" href="css/modules/transition.css">
     <link rel="stylesheet" type="text/css" class="ui" href="blog.css">
 
 
-    <script src="/js/jquery.js"></script>
+    <script src="js/jquery.js"></script>
 
 </head>
 
