added Semantic UI style blog page

--- a/index.html
+++ b/index.html
@@ -69,10 +69,15 @@
 
             <div class="right menu">
                 <div class="large ui blue buttons">
-                    <div class="ui button">Link 1</div>
-                    <div class="ui button">Link 2</div>
-                    <div class="ui button">Link 3</div>
-                    <div class="ui button">Link 4</div>
+                    <a href="/">
+                        <div class="ui button">Home</div>
+                    </a>
+                    <a href="semantic-ui-style.html">
+                        <div class="ui button">Semantic UI style Blog</div>
+                    </a>
+                    <a href="#">
+                        <div class="ui button">Link 3</div>
+                    </a>
                 </div>
 
             </div>
@@ -162,10 +167,10 @@
                 <!-- End Sidebar -->
             </div>
         </div>
-        
 
-    <!-- Footer -->
-    <div class="ui divider"></div>
+
+        <!-- Footer -->
+        <div class="ui divider"></div>
         <div class="ui grid">
             <footer class="ui row">
                 <div class="eight wide column">
