fixed some more path issues with gh-pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             <div class="right menu">
                 <div class="large ui blue buttons">
-                    <a href="/">
+                    <a href="#">
                         <div class="ui button">Home</div>
                     </a>
                     <a href="semantic-ui-style.html">
