--- a/semantic-ui-style.html
+++ b/semantic-ui-style.html
@@ -77,10 +77,10 @@
         </div>
         <div class="container">
 
-            <a class="active item" href="/">
+            <a class="active item" href="index.html">
                 <i class="home icon"></i> Home
             </a>
-            <a class="item" href="/">
+            <a class="item" href="index.html">
                 <i class="comment icon"></i> Zurb Foundation Style Blog
             </a>
             <a class="item" href="#">
