added class to footer header

--- a/semantic-ui-style.html
+++ b/semantic-ui-style.html
@@ -165,7 +165,7 @@
                     <div class="eight wide column">
                         
                         <ul class="ui horizontal list">
-                                <a href="/"  class="item">Blog Template</a>
+                                <a href="/"  class="item ui header">Blog Template</a>
                                 <a href="/" class="item">Home</a>
                                 <a href="#" class="item">Blog</a>
                                 <a href="#" class="item">News &amp; Events</a>
